deployment/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow
  labels:
    istio-injection: enabled
    katib-metricscollector-injection: enabled
    serving.kserve.io/inferenceservice: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: kserve
  labels:
    control-plane: kserve-controller-manager
    controller-tools.k8s.io: "1.0"
---
apiVersion: v1
kind: Namespace
metadata:
  name: argo
