deployment/manifests/port-forward-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeflow-ui-nodeport
  namespace: kubeflow
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
    name: http
  selector:
    app: ml-pipeline-ui
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-nodeport
  namespace: kubeflow
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30000
    name: http
  selector:
    app: mlflow-server
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console-nodeport
  namespace: kubeflow
spec:
  type: NodePort
  ports:
  - port: 9001
    targetPort: 9001
    nodePort: 30001
    name: console
  selector:
    app: minio
